--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,14 +7,18 @@
 </head>
 <body>
     <header>
-        <h1>のToDoリスト</h1>
+        <h1><%=username%>のToDoリスト</h1>
     </header>
     <form action="/" method="post">
         <label>タスクの追加</label>
         <input required type="text" name="add" placeholder=""/>
         <input type="submit" value="登録"/>
     </form>
-    <p><%= visitCount %> 回訪れました</p>
+        <% for(let i=0;i< datas.rowCount;i++){%>
+        <li><%= datas.rows[i].data %></li>
+        <%}%>
+  
+    
     <footer>
 
     </footer>
