--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <form action="/login" method="post">
     <div>
-        <label>ユーザーID：</label>
-        <input type="text" name="name"/>
+        <label>名前　　　：</label>
+        <input type="text" name="username"/>
     </div>
     <div>
         <label>パスワード：</label>
@@ -11,6 +11,5 @@
         <input type="submit" value="ログイン"/>
     </div>
     <h5>
-        <%= error %>
     </h5>
 </form>    
