--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,10 @@
 </head>
 <body>
     <header>
-        <h1><%=username%>のToDoリスト</h1>
+        <h1><%=user.username%>のToDoリスト</h1>
+        <form action="/logout" method="post">
+            <input type="submit" value="ログアウト"/>
+        </form>
     </header>
     <form action="/" method="post">
         <label>タスクの追加</label>
