ユーザーごとに表示データを変える機能実装

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,14 @@
     <div>
         <input type="submit" value="ログイン"/>
     </div>
-    <h5>
-    </h5>
+</form>   
+
+<form action="/useradd" method="post">
+    <div>
+        <input type="submit" value="ユーザー登録"/>
+    </div>
 </form>    
+
+<h5>
+    <%=errormessage%>
+</h5>
