--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,11 @@
         <input required type="text" name="add" placeholder=""/>
         <input type="submit" value="登録"/>
     </form>
+    <form action="/done" method="post">
         <% for(let i=0;i< datas.rowCount;i++){%>
-        <li><%= datas.rows[i].data %></li>
+        <li><input type="checkbox" name="doneflg"　VALUE=<%= datas.rows[i].flgdone %>>　<input TYPE="HIDDEN" NAME="iddata" VALUE=<%= datas.rows[i].id %>><%= datas.rows[i].data %></li>
         <%}%>
-  
+    </form>
     
     <footer>
 
