--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
     </div>
 </form>   
 
-<form action="/useradd" method="post">
+<form action="/useradd" method="get">
     <div>
         <input type="submit" value="ユーザー登録"/>
     </div>
